fix mobile nav being cut off with styles render and put some extra space on the bottom of the mobile nav

--- a/assets/sass/layout/_page.scss
+++ b/assets/sass/layout/_page.scss
@@ -6,7 +6,7 @@
 // STRUCTURE
 #page.site {
 	position: relative;
-	overflow: hidden;
+	// overflow: hidden; // Not sure why I did this but it cuts off the mobile navs render
 }
 
 #content.site-content {
